Changelog
=========


2.0.5 (unreleased)
------------------

- Nothing changed yet.


2.0.4 (2012-03-28)
------------------

- Add Globalindex Maintenance View (reindex and check predecessor sync).
  Issue #1429 Globalindex Reindex Funktionalitaet implementieren
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1429
  [phgross]


2.0.3 (2012-02-29)
------------------

- Rebuild report functionality, so that it works also in catalog listing.
  Issue #1426 Test Rot 2.3: Auswahl exportieren funktioniert nicht
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1426
  [phgross]


2.0.2 (2012-02-27)
------------------

- Use get_css_class for globalindex task listings.
  [jone]

- Fix item expression in indexed_task_link function.
  Issue #1412 Optimierung Mandant des Auftraggebers
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1412
  [jone]

- Made adjustments on the XLSReport: column order, translations, footer
  Issue #1286 Aufgabenexport um Dossiertitel erweitern.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1286
  [phgross]

- Added French translations
  [ttschanz]

- linked() helper: Use a special helper for subtasks.
  Issue #1373 Spezielles Icon fuer Unteraufgaben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1373
  [jone]

- Add is_subtask column to task global index.
  Issue #1373 Spezielles Icon fuer Unteraufgaben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1373
  [jone]

- Fixed tests: Added plone.app.testing to tests_require
  [lgraf]

- we prevent to raise database-error if we have a too long breadcrumb_title string by shorten the string
  Issue #1393 og.globalindex: ORA-12899: value too large for column "OG_GI"."TASKS"."BREADCRUMB_TITLE"
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1393
  [eschmutz]
